# redesigned-adventure

./: .gitignore  .replit  LICENSE  README.md  ad_hoc_image.py  clean_descriptions.py  convert_hotel_images_to_files.py  convert_location_images_to_files.py  convert_room_rate_images.py  create_fake_hotels.py  create_fake_room_rates.py  create_hotel_images.py  create_location_images.py  create_room_rate_images.py  create_travelectable_db.py  data.sql  description.py  dump.rdb  get_distinct_room_types.py  hotel_names.txt  hotel_rates.py  hotels.py  locations.py  locations.txt  main.py  mock_data.py  populate_locations.py  pyproject.toml  replit.nix  requirements.txt  resize_and_save_location_img.py  room_images.py  room_rates.py  room_types.txt  room_types_v2.txt  start.sh  strip_underscore_and_pk_from_filename.py  tasks.py  tests_description.py  tests_tasks.py  (+5 more)
tests/: test_mock_data.py
