[tool.poetry]
name = "redesigned-adventure"
version = "0.1.0"
description = "Creates mock data for the travelectable travel site."
authors = ["Todd Bittner tbittner@coastalchicago.com"]
readme = "README.md"
packages = [{include = "redesigned_adventure"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
replicate = "0.26.0"
meross-iot = "^0.4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
